2010-06-14  Noel O'Boyle

	* Add target "make docs" to make the Doyxgen docs: $ROOT/doc/Doxyfile.in
	is converted to $ROOT/Doxyfile by substituting the $BABEL_VERSION and
	the PATH to Dot.

2010-06-13  Noel O'Boyle

	* src/formats/pdbformat.cpp: Applying Richard Hall's patch to fix
	handling of CONECT records where bond order was split over two lines.
	This can occur, for example, with the sulfur in RS(=O)(=O)R'.

2010-06-13  Noel O'Boyle

	* src/obconversion.cpp: Applying Tim's patch to fix memory leak

2010-06-13  Jean Brefort  <jean.brefort@normalesup.org>

	* src/math/spacegroup.cpp: make import more flexible.

2010-06-11  Noel O'Boyle

	* windows-vc2008/*default_build.bat: Add quotation marks around %CD%
	to handle case where path to current directory contains a space.

2010-06-11  Noel O'Boyle

	* src/graphsym.cpp: Fix memory leak (use of 'new' without
	corresponding 'delete')

2010-06-11  Chris Morley

	* src/descriptor.cpp(ParsePredicate): Before doing a numeric comparison,
	ensure the the filter string contains a number only. Fixes #3014398
	
	* src/formats/mdlformat.cpp: Added an option to read only the title
	and the format to produce molecules with zero atoms.
	Useful for fast selection by title from a sd file(UNIX line endings only):
	  babel all-sdf.sdf -ocopy out.sdf --filter "title=1str*" -at
	  
	* src/GUI/OBGUI.cpp: In open and save file dialogs add gz compressed
	files to filter	string. So, as well as *.sdf, *.sdf.gz files are shown. 

2010-06-07  Noel O'Boyle

	* scripts/CMakeLists.txt, scripts/openbabel-csharp.i,
	windows-vc2008/Distribution/*obdotnet*: Enable the CSharp bindings to
	be compiled (at least on windows so far).

2010-06-07  Noel O'Boyle

	* scripts/CMakeLists.txt, scripts/perl/Makefile.PL: Now perl bindings
	seem to 'make install' correctly.

2010-06-06  Noel O'Boyle

	* scripts/CMakeLists.txt, scripts/perl/Makefile.PL: Now perl bindings seem to 'make' correctly.

2010-06-06  Noel O'Boyle
